tdf#162713 Changed format for date-field and time-field in form

regression from
    commit 9c92eb6800468de34c5aec3690c1b990a4e763c9
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon May 13 15:42:27 2024 +0200
    createFromAscii -> OUString literals in OLimitedFormats

Change-Id: I620526e3e0efd9e9376e428881e0240e2d3017d8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174352
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>